<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nb.warcvalidator.veidemann</groupId>
    <artifactId>veidemann-warc-validator</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <organization>
        <name>National Library of Norway</name>
        <url>http://nb.no</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <name>WarcValidator</name>
    <description>Validate WARC files using Jhove</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <docker.tag>latest</docker.tag>

        <docker.java.image>openjdk:8u151-jdk-alpine</docker.java.image>
        <jhove.version>1.18.1</jhove.version>

        <log4j.version>2.7</log4j.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.21</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-jul</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>com.rethinkdb</groupId>
            <artifactId>rethinkdb-driver</artifactId>
            <version>2.3.3</version>
        </dependency>

        <dependency>
            <groupId>org.openpreservation.jhove</groupId>
            <artifactId>jhove-core</artifactId>
            <version>${jhove.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openpreservation.jhove</groupId>
            <artifactId>jhove-ext-modules</artifactId>
            <version>${jhove.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.11</version>
        </dependency>

        <!-- Configuration framework -->
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>1.3.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Make version number available for application -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>docker-build</id>
            <build>
                <plugins>
                    <!-- Create assembly with startup scripts and dependencies -->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>appassembler-maven-plugin</artifactId>
                        <version>2.0.0</version>
                        <configuration>
                            <programs>
                                <program>
                                    <mainClass>no.nb.nna.veidemann.warcvalidator.Main</mainClass>
                                    <id>${project.artifactId}</id>
                                </program>
                            </programs>
                            <binFolder>bin</binFolder>
                            <repositoryName>lib</repositoryName>
                            <repositoryLayout>flat</repositoryLayout>
                            <configurationDirectory>config</configurationDirectory>
                            <endorsedDir>plugins</endorsedDir>
                            <preAssembleDirectory>src/main/distfiles</preAssembleDirectory>
                            <extraJvmArguments>-Dconfig.file=@BASEDIR@/config/application.conf
                                -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
                            </extraJvmArguments>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>assemble</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- Build Docker Image -->

                    <plugin>
                        <groupId>io.fabric8</groupId>
                        <artifactId>docker-maven-plugin</artifactId>
                        <version>0.23.0</version>
                        <executions>
                            <execution>
                                <id>docker-build</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <images>
                                <image>
                                    <name>norsknettarkiv/${project.artifactId}</name>
                                    <alias>${project.artifactId}</alias>
                                    <build>
                                        <from>${docker.java.image}</from>
                                        <maintainer>National Library of Norway</maintainer>
                                        <tags>
                                            <tag>${docker.tag}</tag>
                                        </tags>
                                        <optimise>true</optimise>
                                        <volumes>
                                            <volume>/warcs</volume>
                                            <volume>/validwarcs</volume>
                                            <volume>/invalidwarcs</volume>
                                            <volume>/delivery</volume>
                                        </volumes>
                                        <env>
                                            <WARC_DIR>/warcs</WARC_DIR>
                                            <VALID_WARC_DIR>/validwarcs</VALID_WARC_DIR>
                                            <INVALID_WARC_DIR>/invalidwarcs</INVALID_WARC_DIR>
                                            <DELIVERY_WARC_DIR>/delivery</DELIVERY_WARC_DIR>
                                        </env>
                                        <cmd>
                                            <exec>
                                                <arg>/warcvalidator/bin/${project.artifactId}</arg>
                                            </exec>
                                        </cmd>
                                        <assembly>
                                            <targetDir>/warcvalidator</targetDir>
                                            <inline>
                                                <includeBaseDirectory>true</includeBaseDirectory>
                                                <fileSets>
                                                    <fileSet>
                                                        <directory>target/appassembler/bin</directory>
                                                        <outputDirectory>bin</outputDirectory>
                                                        <includes>
                                                            <include>${project.artifactId}</include>
                                                        </includes>
                                                        <fileMode>0755</fileMode>
                                                    </fileSet>
                                                    <fileSet>
                                                        <directory>target/appassembler/bin</directory>
                                                        <outputDirectory>bin</outputDirectory>
                                                        <excludes>${project.artifactId}</excludes>
                                                        <fileMode>0644</fileMode>
                                                    </fileSet>
                                                    <fileSet>
                                                        <directory>target/appassembler</directory>
                                                        <outputDirectory>/</outputDirectory>
                                                        <excludes>
                                                            <exclude>bin</exclude>
                                                        </excludes>
                                                    </fileSet>
                                                </fileSets>
                                                <files>
                                                    <file>
                                                        <source>LICENSE</source>
                                                        <outputDirectory></outputDirectory>
                                                        <fileMode>0644</fileMode>
                                                    </file>
                                                </files>
                                            </inline>
                                        </assembly>
                                    </build>
                                </image>
                            </images>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>